Install dependencies from Debian
Instead of pulling in go modules from the Internet with the go tool at
build time, depend on confluent-kafka-go as packaged in Debian. Stop
using jsonschema as it's not packaged and not terribly useful anyways
due to high performance costs and debatable benefits.

Bug: T237993
Change-Id: If44d8c0f0c0c9ee572e756dcbb72767ae8b6c52d

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Emanuele Rocca <ema@wikimedia.org>
 Uploaders: Valentin Gutierrez <vgutierrez@wikimedia.org>
-Build-Depends: debhelper (>= 10), golang-go, ca-certificates, pkg-config, git, librdkafka-dev (>= 0.11.6)
+Build-Depends: debhelper (>= 10), golang-github-confluentinc-confluent-kafka-go-dev (>= 0.11.6), golang-go
 Standards-Version: 4.2.1
 
 Package: atskafka
