--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Emanuele Rocca <ema@wikimedia.org>
 Uploaders: Valentin Gutierrez <vgutierrez@wikimedia.org>
-Build-Depends: debhelper (>= 10), golang-github-confluentinc-confluent-kafka-go-dev (>= 0.11.6), golang-go, golang-github-prometheus-client-golang-dev, prometheus-rdkafka-exporter
+Build-Depends: debhelper (>= 10), golang-github-confluentinc-confluent-kafka-go-dev (>= 0.11.6), golang-go, golang-github-prometheus-client-golang-dev, prometheus-rdkafka-exporter (>= 0.2)
 Standards-Version: 4.2.1
 
 Package: atskafka
